--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -9,8 +9,7 @@ steps:
     command: |
       julia --color=yes --project -e '
       using Pkg
-      # Pkg.add("CUDA")
-      Pkg.add(url="https://github.com/JuliaGPU/CUDA.jl", rev="master")
+      Pkg.add("CUDA")
       Pkg.instantiate()
       include("test/gpu/nvidia.jl")'
     timeout_in_minutes: 30
